added future scope, proto1 unification-fd, proto2.1 modifications, proto4 io is pure

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -353,6 +353,20 @@ year="2012",
 url="http://hackage.haskell.org/package/unification-fd",
 note={\url{http://hackage.haskellhttp://yieldprolog.sourceforge.net/.org/package/unification-fd}}
 }
+@misc{website:unification-fd-lib-tutorial1,
+title = {Unification Tutorial 1},
+author = {Wren Thornton},
+month = {October},
+year = {2015},
+url = {http://community.haskell.org/~wren/unification-fd/test/tutorial/tutorial1.html}
+}
+@misc{website:unification-fd-lib-tutorial2,
+title = {Unification Tutorial 2},
+author = {Wren Thornton},
+month = {October},
+year = {2015},
+url = {http://community.haskell.org/~wren/unification-fd/test/tutorial/tutorial2.html}
+}
 @misc{cmu-lib,
 author="John Ramsdell",
 title="The cmu package",
@@ -1392,6 +1406,13 @@ url = {https://wiki.haskell.org/Kind}
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
  address = {Boston, MA, USA},
 } 
+@misc{website:ioispurechristaylor,
+title = {IO is pure},
+author = {Chris Taylor},
+month = {February},
+year = {2013},
+url = {http://chris-taylor.github.io/blog/2013/02/09/io-is-not-a-side-effect/}
+}
 @comment{website:,
 title = ,
 author = ,
