Shifted line numbers to right, added content to pwp, futurescope, reference for resolution to proto3

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1413,6 +1413,27 @@ month = {February},
 year = {2013},
 url = {http://chris-taylor.github.io/blog/2013/02/09/io-is-not-a-side-effect/}
 }
+@misc{website:prologintroumiami,
+title = {Prolog Introduction},
+author = {University of Miami},
+month = {March},
+year = {2012},
+url = {http://www.cs.miami.edu/home/geoff/Courses/CSC648-12S/Content/Prolog/Introduction.shtml}
+}
+@misc{website:resolutionlogicwiki,
+title = {Resolution},
+author = {Wikipedia},
+month = {October},
+year = {2015},
+url = {https://en.wikipedia.org/wiki/Resolution_(logic)}
+}
+@misc{website:swiprologsyntaxandsemantics,
+title = {swi Prolog Syntax and Semantics},
+author = {SWI Prolog},
+month = {},
+year = {},
+url = {http://www.swi-prolog.org/pldoc/man?section=SyntaxAndSemantics}
+}
 @comment{website:,
 title = ,
 author = ,
