--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -24,7 +24,7 @@
 \usepackage{amssymb}
 \usepackage{tcolorbox}
 
-\usepackage[pagewise]{lineno}
+\usepackage[pagewise, right]{lineno}
 
 \usepackage{fancyvrb}
 \usepackage{paralist}
