--- a/proto3.tex
+++ b/proto3.tex
@@ -31,6 +31,10 @@ the resolver searches to create and a list of  goals and then tries to achieve e
 
 \cite{website:prologresolution}
 
+\cite{website:resolutionlogicwiki}
+
+
+
 
 \section{Search strategies}
 The base implementation used for this prototype  is \cite{website:mini-prolog-hugs98} and below are the search strategies 
