Added omni outliner thesis outline, todo items for nov 5th meeting

--- a/toDo.tex
+++ b/toDo.tex
@@ -15,6 +15,15 @@
 \textit{\color{red} This Chapter needs to be removed from the final
   work.}
 
+\textbf{Meeting on 5th Novemeber 2015} 
+\begin{enumerate}
+\item Write about this chapter and chapter conclusion for all chapters
+
+\item Till haskell why haskell chapter 11 wait for feedback
+
+\item In the remaining chapters write according to flow == move around stuff or add new content.
+\end{enumerate}
+
 \begin{enumerate}
 \item [\textbf{2015-10-29}]
 \item Abstract is too long and incorrect.
