--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -24,7 +24,8 @@
 \usepackage{amssymb}
 \usepackage{tcolorbox}
 
-\usepackage[pagewise, right]{lineno}
+\usepackage{amsthm}
+\usepackage[pagewise,right]{lineno}
 
 \usepackage{fancyvrb}
 \usepackage{paralist}
