Added beginning and recap sections to chapters, changed LangWithIO to ResultWithIO in future scope

--- a/background.tex
+++ b/background.tex
@@ -10,6 +10,10 @@
 \chapter{Background}\label{chap:background}
 %----------------------------------------------------------------------------
 
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
 Programming Languages fall into different categories also known as "paradigms". They exhibit different 
 characteristics according to the paradigm they fall into. It has been argued 
 \cite{Krishnamurthi:2008:TPL:1480828.1480846} that rather than classifying a language into a particular paradigm, it 
@@ -129,4 +133,8 @@ derived from both the participating languages.
 \end{enumerate}
 
 The approaches listed above are next in line for discussions.  
+
+
+\section{Chapter Recap}
+
 \end{document}
