--- a/eplipl.tex
+++ b/eplipl.tex
@@ -7,6 +7,13 @@
 %-----------------------------------------------------------------------------
 \chapter{Embedding a Programming Language into another Programming Language}\label{chap:eplipl}
 %-----------------------------------------------------------------------------
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
+
+
 Embedding a language into another language has been explored with a variety of languages. Attempts have been made to build Domain Specific Languages from the host languages \cite{hudak1996building}, Foriegn Function Interfaces \cite{barzilay2004foreign} 
 
 Creating a programming language from scratch is a tedious task requiring ample amount of programming, not to mention the effort required in 
@@ -99,5 +106,9 @@ As discussed in the
 \begin{enumerate}
 \item ????
 \end{enumerate}
+
+
+\section{Chapter Recap}
+
 
 \end{document}
