--- a/futureScope.tex
+++ b/futureScope.tex
@@ -7,6 +7,12 @@
 %----------------------------------------------------------------------------
 \chapter{Future Scope}\label{chap:futureScope}
 
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
+
 \begin{enumerate}
 
 \item Quasi quoter to get something like,
@@ -30,7 +36,7 @@ queryResolver searcStrategy query knowledgeBase
 \item Pure + IO Combined Language
 
 \begin{minted}[linenos]{haskell}
-data LangWithIO typevariableforpureexpressions typevariableforioexpressions
+data ResultWithIO typevariableforpureexpressions typevariableforioexpressions
 	= PureConstructor_1 ....
 	| PureConstructor_2 ....
 	| IOContrcutor_1 .....
@@ -43,5 +49,8 @@ data LangWithIO typevariableforpureexpressions typevariableforioexpressions
 \item 
 
 \end{enumerate}
+
+
+\section{Chapter Recap}
 
 \end{document}
