--- a/hwh.tex
+++ b/hwh.tex
@@ -6,6 +6,12 @@
 \chapter{Haskell or Why Haskell ?}\label{chap:hwh}
 % ---------------------------------------------------------------------------
 
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
+
 In this chapter we discuss the properties of \progLang{Haskell} 
 
 \par This chapter discusses the properties of the host language \progLang{Haskell} and mainly the feature set it provides for embedding 
@@ -129,6 +135,7 @@ But I still think that Haskell has the edge. I'm aware of the Holy War between s
 
 
 
+\section{Chapter Recap}
 
 
 
