--- a/introduction.tex
+++ b/introduction.tex
@@ -7,6 +7,15 @@
 \chapter{Introduction}\label{chap:introduction}
 %----------------------------------------------------------------------------
 
+
+\section{What is this chapter about}
+
+This chapter introduces the scope of the thesis along with the preliminary arguments  
+
+
+-----------------------------------------------------------------------------
+
+
 \section{Beginnings}
 \begin{comment}
 Computers have become a part of everyone's life. From the ones in our pockets to the ones on desks or in our school bags, working or in fact living without 
@@ -139,8 +148,9 @@ Programming Language into another Programming Language and  \chapterReference{ch
 Functional Logic Languages). Some of the indirectly related content \chapterReference{chap:relatedWork}{Chapter 6} and finishing off with the 
 \chapterReference{chap:conclusion}{Chapter 7}, the expected outcomes.     
 
-%\section{The Plan}
+%\section{The Plan}	
 
+\section{Chapter Recap}
 
 
 \end{document}
