--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -2,6 +2,12 @@
 
 \begin{document}
 
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
+
 \chapter{Meta Syntactic Variables}\label{chap:metasyntacticvariables}
 
 Some sources for the topic 
@@ -35,6 +41,7 @@ Standard set: foo, bar, baz, foobar/quux, quuux, quuuux, ....
 example: "Suppose I have a list, foo, with a node, bar, ..."
 
 
+\section{Chapter Recap}
 
 \end{document}
  
