--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -5,6 +5,12 @@
 
 \chapter{Multi Paradigm Languages (Functional Logic Languages)}\label{chap:multiparadigm}
 
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
+
 Over the years another approach has branched off from embedding languages, to merge and/or integrate programming 
 languages from different paradigms. Let us take an example of the \progLang{Scala} Programming Language \cite{website:scala}, a 
 hybrid Object-Functional Programming Language which takes a leaf from each of the two books. In this thesis, the languages in 
@@ -250,5 +256,8 @@ Unifying / Marrying / Merging / Combining Programming Paradigms / Theories
 \item ???
 \end{enumerate}
 
+
+
+\section{Chapter Recap}
 
 \end{document}
