--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -6,6 +6,12 @@
 %-----------------------------------------------------------------------------
 \chapter{Accomplished Work}\label{chap:proposedWork}
 %-----------------------------------------------------------------------------
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
+
 \section{Current Work}
 
 There have been several attempts at embedding \progLang{Prolog} into \progLang{Haskell} which are discussed below along with the 
@@ -165,6 +171,7 @@ Transformation of Logic Programs)
 \end{comment}
 
 
+\section{Chapter Recap}
 
 
 
