--- a/proto1.tex
+++ b/proto1.tex
@@ -6,6 +6,8 @@
 
 \chapter{Prototype 1}{\label{proto1}}
 
+
+
 \section{About this chapter}
 This chapter throws light on what \progLang{Prolog} does to resolve a given query via \textit{unification} and this can be replicated in
 the host language along with the challenges.  
@@ -418,5 +420,9 @@ f1 dict = do
   \label{fig:sample}
 \end{figure}
 \end{enumerate}
+
+
+\section{Chapter Recap}
+
 
 \end{document}
