--- a/proto3.tex
+++ b/proto3.tex
@@ -6,6 +6,9 @@
 \chapter{Prototype 3}{\label{proto3}}
 
 
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
 
 When two terms are to be unified we can use \ref{proto1} ,
 
@@ -905,5 +908,9 @@ varY = Var (1,"y")
 stConvertor :: [(Id, Prolog)] -> [st]
 stConvertor xs = Prelude.map (\(varId, p) -> (->-) varId (unFlatten $ unP $ p)) xs 
 \end{minted}
+
+
+\section{Chapter Recap}
+
 
 \end{document}
