--- a/proto4.tex
+++ b/proto4.tex
@@ -6,6 +6,10 @@
 \chapter{Prototype 4}{\label{proto4}}
 
 
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
 Our aim to embedd IO into the DSL
 
 So something like a "data" declaration for IO operations
@@ -504,5 +508,9 @@ Loading package unification-fd-0.10.0.1 ... linking ... done.
 --}
 
 \end{minted}
+
+
+\section{Chapter Recap}
+
 
 \end{document}
