--- a/pwp.tex
+++ b/pwp.tex
@@ -9,6 +9,11 @@
 % ---------------------------------------------------------------------------
 %Prolog / Why Prolog ?
 
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
 This chapter discusses the properties of the target language \progLang{Prolog} and the feature set that will be translated to the host 
 language to extend its capabilities.
 
@@ -235,5 +240,9 @@ prolog_rules :- write("Prolog is by far the best, most productive, easiest progr
 \end{comment}
 
 \end{enumerate}
+
+
+\section{Chapter Recap}
+
 
 \end{document}
