--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -10,6 +10,11 @@
 % ---------------------------------------------------------------------------
 
 
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
+
 There are some technicalities which are indirectly related to the problem but do not bare a point of contact. The underpinnings of the 
 languages throw some more light on the how different languages work to solve a problem. Different programming paradigms incorporate 
 different operational mechanisms. For example, \progLang{Prolog} programs execute on the Warren Abstract Machine \cite{ait1999warren} which 
@@ -157,6 +162,10 @@ So you cannot write a program, you cannot do much with the REPL, its not a full 
 	\item Escher
 \end{enumerate}
 \end{comment}
+
+
+\section{Chapter Recap}
+
 
 \end{document}
 
