--- a/results.tex
+++ b/results.tex
@@ -4,6 +4,11 @@
 \begin{document}
 \chapter{Results}\label{sect:results}
 
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section{Types}
 
@@ -164,5 +169,6 @@ data Result = Ordinary ____________ --No I/O required
 
 
 
+\section{Chapter Recap}
 
 \end{document}
