--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -7,6 +7,13 @@
 %----------------------------------------------------------------------------
 \chapter{Work Completed}\label{chap:workCompleted}
 %----------------------------------------------------------------------------
+
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
+
 \section{What we are doing}
 A partial implementation of the logic programming language \progLang{Prolog} is provided by the library \texttt{prolog-0.2.0.1}. One of the 
 objectives is to implement monadic unification using the library \cite{unification-fd-lib}. 
@@ -372,6 +379,9 @@ Whereas a \textit{FlatTerm} exspression can not only have an outer wrapper but a
 
 \end{enumerate}
 
+
+
+\section{Chapter Recap}
 
 
 \end{document}
