--- a/conclusion.tex
+++ b/conclusion.tex
@@ -6,6 +6,13 @@
 % ---------------------------------------------------------------------------
 \chapter{Conclusion / Expected Outcomes}\label{chap:conclusion}
 % ---------------------------------------------------------------------------
+
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
+
 \begin{comment}
 As we have seen there have been a number of attempts at solving the problem and so have been the issues. First and foremost, with appropriate  documentation the resulting library should be easy to use. Writing a program must be very much the same as writing a program in the host language. With the introduction of few new constructs defining
 \end{comment}
@@ -14,5 +21,7 @@ The aim of this study is to experiment with two different languages working toge
 
 Moreover, this will be an attempt to answer the question how practical \progLang{Prolog} fits into \progLang{Haskell}.                  
 
+
+\section{Chapter Recap}
 
 \end{document}
