--- a/embedding.tex
+++ b/embedding.tex
@@ -3,6 +3,11 @@
 
 \begin{document}
 
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
 \chapter{Embedding a Programming Language into another Programming Language }\label{chap:embedding}
 
 The art of embedding a programming language into another one has been explored a number of times in the form 
@@ -617,6 +622,9 @@ As discussed in the
 \begin{enumerate}
 \item ????
 \end{enumerate}
+
+
+\section{Chapter Recap}
 
 
 \end{document}
