--- a/quasiquotation.tex
+++ b/quasiquotation.tex
@@ -80,6 +80,7 @@ required to build values of a given data type, or, worse yet, to pattern match a
 Allow \progLang{Haskell} expressions and patterns to be constructed using domain specific, programmer-defined concrete syntax.
 
 
+\section{Chapter Recap}
 
 
 \end{document}
