--- a/introduction.tex
+++ b/introduction.tex
@@ -10,7 +10,7 @@
 
 \section{What is this chapter about}
 
-This chapter introduces the scope of the thesis along with the preliminary arguments  
+This chapter introduces the scope of the thesis along with the preliminary arguments{\Huge\textcolor{red}{.}}
 
 
 -----------------------------------------------------------------------------
@@ -23,38 +23,66 @@ them is difficult if not impossible. All the more reason to know how to use one.
 to utilise their true potential, one must go deeper and communicate with them. This is where the art of programming steps in.     
 \end{comment}
 
-\par Programming has become an integral part of working and interacting with computers and day by day more and more complex problems are 
-being tackled using the power of programming technologies. It is possibly the only way to talk to computers and hence the need for a robust 
-and multi purpose programming language has never been more urgent. The desirability of a programming language depends on a lot of factors 
-such as the ease of use, the features and functionalities that it provides, adaptability and what sort of problems can it solve. One is  
-spoilt for choice with a number of options for a wide variety of programming paradigms, for example Object Oriented Languages. 
+Programming has become an integral part of working and interacting with computers and day by day more and more complex
+problems are being tackled using the power of programming technologies.
+It is possibly the only way to talk to computers and hence the need for a robust and multi purpose programming language
+has never been more urgent.\endnote{%
+  This argument for the need for robust, multi-purpose languages seems weak.
+  Can we either drop it, or extend it somewhat?
+}
+The desirability of a programming language depends on a lot of factors such as the ease of use, the features and
+functionalities that it provides, adaptability and what sort of problems \yyy{can it}{it can} solve.
+One is spoilt for choice with a number of options for a wide variety of programming paradigms, for example Object
+Oriented Languages.\endnote{%
+  Rewrite this sentence.
+}
 
-Over the last decade the declarative style of programming has gained 
-popularity. The methodologies that have stood out are the Functional and Logical Approaches. The former is based on Functions and Lambda 
-Calculus, while the latter is based on Horn Clause Logic. Each of them has its own advantages and ﬂaws. How does one choose which approach 
-to adopt? Perhaps one does not need to choose! This document looks at the attempts, improvements and future possibilities of uniting 
-\progLang{Haskell}, a Purely Functional Programming Language and \progLang{Prolog}, a Logical Programming Language so that one is not 
-forced to choose.
+Over the last decade the declarative style of programming has gained popularity.
+The methodologies that have stood out are the Functional and Logical Approaches.\endnote{%
+  What style guide are you using to determine capitalization?
+}
+The former is based on Functions and Lambda Calculus, while the latter is based on Horn Clause Logic.
+Each of them has its own advantages and ﬂaws.
+How does one choose which approach to adopt?
+Perhaps one does not need to choose!
+This document looks at the attempts, improvements and future possibilities of uniting \progLang{Haskell}, a Purely
+Functional Programming Language and \progLang{Prolog}, a Logical Programming Language so that one is not forced to
+choose.\endnote{%
+  Say more here?
+  This seems like a natural place to have more high-level comments on where the thesis is going.
+}
 
 
 
 \section{Thesis Statement}
 
-The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and \progLang{Prolog} by embedding 
-the latter into the former and analysing the result of doing so as they have conflicting characteristics. The finished product will be 
-something like a \textit{haskellised} \progLang{Prolog} which has logical programming like capabilities.       
+The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and
+\progLang{Prolog} by embedding the latter into the former and analysing the result of doing so as they have conflicting
+characteristics.
+The finished product will be something like a \textit{haskellised} \progLang{Prolog} which has logical programming like
+capabilities.
 
 
 %----------------------------------------------------------------------------
 \section{Problem Statement}
 %----------------------------------------------------------------------------
 
-Over the years the development of programming languages has become more and more rapid. Today the number of is in the thousands and counting. The 
-successors attempt to introduce new concepts and features to simplify the process of coding a solution and assist the programmer by lessening the 
-burden of carrying out standard tasks and procedures. A new one tries to capture the best of the old; learn from the mistakes, add new concepts and 
-move on; which seems to be good enough from an evolutionary perspective. But all is not that straight forward when shifting from one language 
-to another. There are costs and incompatibilities to look at. A language might be simple to use and provide better performance than its 
-predecessor but not always be worth the switch.
+Over the years the development of programming languages has become more and more rapid.
+Today the number of is in the thousands and counting.\endnote{%
+  Reference?  How did you come up with this estimate?
+}
+The successors attempt to introduce new concepts and features to simplify the process of coding a solution and assist
+the programmer by lessening the burden of carrying out standard tasks and procedures.
+A new one tries to capture the best of the old; learn from the mistakes, add new concepts and move on; which seems to be
+good enough from an evolutionary perspective.
+But all is not that straight forward when shifting from one language to another.
+There are costs and incompatibilities to look at.
+A language might be simple to use and provide better performance than its predecessor but not always be worth the
+switch.\endnote{%
+  What is the key idea in this \P{}?
+  I believe that you want to link this \P{} to the idea that embedded or merged languages are good, but I don't see
+  where you do that.
+}
 
 \begin{comment}
 \par \progLang{Prolog} has a similar story. It was born in an era where procedural programming had made everyone notice their presence. Talking about 
@@ -69,21 +97,31 @@ logic,website:prolog1000db}. But there are a lot of good things about \progLang{
 for search problems. 
 \end{comment}
 
-\par \progLang{Prolog} is a language that has a hard time being adopted. Born in an era where procedural languages were receiving a lot of 
-attention, it suﬀered from competing against another new kid on the block: \progLang{C}. Some of the problems were of its own making. Basic 
-features like modules were not provided by all compilers. Practical features for real world problems were added in an ad hoc way resulting 
-in the loss of its purely declarative charm. Some say that \progLang{Prolog} is fading away, 
-\cite{website:prolog-steam,website:prolog-death,website:prolog-killer}. It is apparently not used for building large programs 
-\cite{wikiprolog,somogyi1995logic,website:prolog1000db}. However there are a lot of good things about Prolog: it is ideal for search 
-problems; it has a simple syntax, and a strong underlying theory. It is a language that should not die away. 
+\progLang{Prolog} is a language that has a hard time being adopted.
+Born in an era where procedural languages were receiving a lot of attention, it \xxx{suﬀered}{suffered}\endnote{%
+  this looks like it has been cut and paste
+} from competing against another
+new kid on the block: \progLang{C}.
+Some of the problems were of its own making.
+Basic features like modules were not provided by all compilers.
+Practical features for real world problems were added in an ad hoc way resulting in the loss of its purely declarative
+charm.
+Some say that \progLang{Prolog} is fading away, \cite{website:prolog-steam,website:prolog-death,website:prolog-killer}.
+It is apparently not used for building large programs \cite{wikiprolog,somogyi1995logic,website:prolog1000db}.
+However there are a lot of good things about Prolog: it is ideal for search problems; it has a simple syntax, and a
+strong underlying theory.
+It is a language that should not die away.
 
-\noindent So the question is how to have all the good qualities of \textsc{Prolog} without actually using \progLang{Prolog}?  
+So the question is how to have all the good qualities of \textsc{Prolog} without actually using \progLang{Prolog}?  
 
-\par Well one idea is to make \progLang{Prolog} an add-on to another language which is widely used and in demand. Here the choice is 
-\progLang{Haskell}; as both the languages are declarative they share a common background which can help to blend the two.
+\yyy{Well o}{O}ne idea is to make \progLang{Prolog} an add-on to another language which is widely used and in demand.
+Here the choice is \progLang{Haskell}; as both the languages are declarative they share a common background which can
+help to blend the two.
 
-\par Generally speaking, programming languages with a wide scope over problem domains do not provide bespoke support for accomplishing even 
-mundane tasks. Approaching towards the solution can be complicated and tiresome, but the programming language in question acts as the master key. 
+Generally speaking, programming languages with a wide scope over problem domains do not provide bespoke support for
+accomplishing even mundane tasks.
+Approaching towards the solution can be complicated and tiresome, but the programming language in question acts as the
+master key.
 
 \par Flipping the coin to the other side we see, the more specific the language is to the problem domain the easier it is to solve the 
 problem. The simple reason being that, the problem need not be moulded according to the capability  of the language. For example a problem 
